--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   </div>
             </div>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js" defer="defer"></script>
-            <script src="./scripts/main.min.js"></script>
+            <script src="./scripts/main.min.js" defer="defer"></script>
       </body>
 
 </html>
